--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,7 +50,7 @@
     bottom: 0px;
     padding-top: 17px;
     padding-bottom: 17px;
-    color: white !important;
+    color: rgb(50, 100, 130) !important;
     font-weight: 600;
     text-align: center;
     font-size: 0.875em;
