--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,6 @@
     bottom: 0px;
     padding-top: 17px;
     padding-bottom: 17px;
-    color: rgb(50, 100, 130) !important;
     font-weight: 600;
     text-align: center;
     font-size: 0.875em;
@@ -62,7 +61,7 @@
     background-attachment: scroll;
     background-origin: padding-box;
     background-clip: border-box;
-    background-color: #c6c6c6;
+    background-color: rgb(50, 100, 130) !important;
   }
   
   .tags-block {
